compiler/testData/diagnostics/testsWithStdLib/deprecated/deprecationOnReadBytes.kt
import java.io.InputStream

fun InputStream.test() {
    readBytes()

    <!DEPRECATION!>readBytes<!>(1)
}
